# rusty-vegetation

./: .editorconfig  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  rust.yml
src/: main.rs  shader.wgsl
