[package]
name = "rusty-vegetation"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
cgmath = "0.18.0"
env_logger = "0.11.8"
wgpu = "28.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.23.1", features = [ "derive" ] }
random-number = "0.1.9"
